aaa
src/class_system.c:7014:5: error: use of undeclared identifier 'sighandler_t'
    sighandler_t handler_value = (sighandler_t)handler->mPointerValue;
    ^
src/class_system.c:7017:5: error: use of undeclared identifier 'sighandler_t'
    sighandler_t result = signal(signum_value, handler_value);
    ^
src/class_system.c:7019:8: error: use of undeclared identifier 'result'
    if(result == SIG_ERR) {
       ^
src/class_system.c:7024:42: error: use of undeclared identifier 'result'
    (*stack_ptr)->mPointerValue = (char*)result;
                                         ^
src/class_system.c:7079:5: error: use of undeclared identifier 'sighandler_t'
    sighandler_t handler_value = signal_user_handler;
    ^
src/class_system.c:7089:5: error: use of undeclared identifier 'sighandler_t'
    sighandler_t result = signal(signum_value, handler_value);
    ^
src/class_system.c:7091:8: error: use of undeclared identifier 'result'
    if(result == SIG_ERR) {
       ^
src/class_system.c:7640:19: error: implicit declaration of function 'is_pad' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
    bool result = is_pad(win_value);
                  ^
src/class_system.c:7672:19: error: implicit declaration of function 'is_subwin' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
    bool result = is_subwin(win_value);
                  ^
src/class_system.c:7672:19: note: did you mean 'subwin'?
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/curses.h:718:33: note: 'subwin' declared here
extern NCURSES_EXPORT(WINDOW *) subwin (WINDOW *, int, int, int, int);  /* implemented */
                                ^
9 errors generated.
make: *** [src/class_system.o] Error 1
